--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,7 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - href: projects.qmd
+      - href: projects.qmd #projects/eda/eda.qmd
         text: Projects
     right: 
       - icon: linkedin
